<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/bgColor_alpha_0.5"
    android:gravity="bottom">

    <TextView
        android:id="@+id/tv_pop_top"
        style="@style/style_action_list_item"
        tools:text="@string/choose_from_photo"
        />
    <TextView
        android:id="@+id/tv_pop_center"
        android:layout_marginTop="@dimen/spacing_line"
        style="@style/style_action_list_item"
        tools:text="@string/choose_from_camera"
        />
    <TextView
        android:id="@+id/tv_pop_bottom"
        android:layout_marginTop="@dimen/item_spacing_normal"
        style="@style/style_action_list_item"
        tools:text="@string/cancel"
        />
</LinearLayout>

