<?xml version="1.0" encoding="utf-8"?>
<com.wcy.overscroll.OverScrollLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/overscroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <LinearLayout
                    style="@style/style_edit_white_container">

                <TextView
                        style="@style/style_small_text"
                        android:text="@string/login_account"/>

                <android.support.v7.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/et_complete_input"
                        style="@style/style_edit"
                        android:hint="@string/login_account_hint"
                        android:completionThreshold="@integer/login_hint_mix_count"
                        android:visibility="visible"
                        android:maxLines="1"
                        android:layout_weight="1"/>

                <ImageView
                        android:id="@+id/iv_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/login_inputbox_clean"
                        android:padding="15dp"
                        android:visibility="gone"/>

                <com.zhiyicx.baseproject.widget.edittext.DeleteEditText
                        android:id="@+id/et_login_phone"
                        style="@style/style_edit"
                        android:hint="@string/login_account_hint"
                        android:inputType="textPersonName"
                        android:visibility="gone"/>
            </LinearLayout>

            <ImageView style="@style/style_divider_horizontal_light"/>

            <LinearLayout
                    style="@style/style_edit_white_container">

                <TextView
                        style="@style/style_small_text"
                        android:text="@string/password"/>

                <com.zhiyicx.baseproject.widget.edittext.PasswordEditText
                        android:id="@+id/et_login_password"
                        style="@style/style_edit"
                        android:hint="@string/password_input_hint"
                        android:inputType="text"
                        android:text=""/>
            </LinearLayout>

            <!--登录异常相关提示-->
            <include
                    layout="@layout/include_error_tip_text"/>

            <com.zhiyicx.baseproject.widget.button.LoadingButton
                    android:id="@+id/bt_login_login"
                    style="@style/style_login_button"
                    android:layout_marginTop="@dimen/button_login_margin_top"
                    android:enabled="false"
                    app:text="@string/bt_login"/>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_mid"
                    android:layout_marginRight="@dimen/spacing_mid"

                    >
                <!--随便逛逛-->
                <TextView
                        android:id="@+id/tv_look_around"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/spacing_mid"
                        android:paddingBottom="@dimen/spacing_mid"
                        android:text="@string/no_login"
                        android:textColor="@color/normal_for_assist_text"
                        android:textSize="@dimen/size_content_comment"
                        />
                <!--忘记密码-->
                <TextView
                        android:id="@+id/tv_forget_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:paddingTop="@dimen/spacing_mid"
                        android:text="@string/forget_password"
                        android:paddingBottom="@dimen/spacing_mid"
                        android:textColor="@color/normal_for_assist_text"
                        android:textSize="@dimen/size_content_comment"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</com.wcy.overscroll.OverScrollLayout>