<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
            android:id="@+id/ll_container_password"
            style="@style/style_edit_white_container">

        <TextView
                android:id="@+id/tv_pasword_tip"
                style="@style/style_bind_account_text"
                android:text="@string/set_password"/>

        <com.zhiyicx.baseproject.widget.edittext.PasswordEditText
                android:id="@+id/et_password"
                style="@style/style_passward_edit"
                android:hint="@string/password_input_hint"
                android:inputType="textPassword"
                android:maxLength="@integer/password_maxlenght"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_container_sure_password"
            style="@style/style_edit_white_container">

        <TextView
                style="@style/style_bind_account_text"
                android:text="@string/duplicate_password"/>

        <com.zhiyicx.baseproject.widget.edittext.PasswordEditText
                android:id="@+id/et_sure_password"
                style="@style/style_passward_edit"
                android:hint="@string/password_input_hint"
                android:inputType="textPassword"
                android:maxLength="@integer/password_maxlenght"/>

    </LinearLayout>

    <include
            layout="@layout/include_error_tip_text"/>

    <com.zhiyicx.baseproject.widget.button.LoadingButton
            android:id="@+id/bt_sure"
            style="@style/style_login_button"
            android:layout_marginTop="@dimen/button_login_margin_top"
            android:enabled="false"
            app:text="@string/binding"/>
</LinearLayout>